--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chart.js": "^2.7.2",
     "convert-units": "https://github.com/untapped-inc/convert-units",
     "dateformat": "^3.0.3",
+    "fast-sort": "^1.5.6",
     "formik": "^1.5.1",
     "google-maps-react": "^2.0.2",
     "history": "^4.7.2",
@@ -17,6 +18,7 @@
     "lodash": "^4.17.11",
     "material-table": "^1.32.0",
     "moment": "^2.21.0",
+    "moment-timezone": "^0.5.25",
     "prop-types": "^15.6.2",
     "rc-progress": "~2.2.5",
     "react": "^16.3.2",
