--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "redux-form": "^7.4.2",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.2.0",
-    "selectize": "^0.12.6"
+    "selectize": "^0.12.6",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "PORT=3000 react-scripts start",
